whitespace on right bugfix

--- a/src/components/Jumbotron/Jumbotron.module.css
+++ b/src/components/Jumbotron/Jumbotron.module.css
@@ -8,7 +8,7 @@
     margin: 0;
     display: flex;
     height: 100%;
-    width: auto;
+    width: 100vw;
     flex-grow: 1;
 }
 
